force-app/main/default/objects/GamePlayer__c/GamePlayer__c.object-meta.xml
<CustomObject>
    <description>Junction Object Between Game and Player to associate playing 11 with a game</description>
    <label>Match Player</label>
    <nameField>
        <displayFormat>MP-{000000000}</displayFormat>
        <label>Match Player Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>