force-app/main/default/objects/GamePlayer__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipName>GamePlayers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>