force-app/main/default/objects/GamePlayer__c/fields/Inning__c.field-meta.xml
<CustomField>
    <fullName>Inning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inning</label>
    <referenceTo>Inning__c</referenceTo>
    <relationshipLabel>Innings Players</relationshipLabel>
    <relationshipName>InningsPlayers</relationshipName>
    <type>Lookup</type>
</CustomField>