force-app/main/default/objects/GamePlayer__c/fields/IsOut__c.field-meta.xml
<CustomField>
    <fullName>IsOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Out?</label>
    <type>Checkbox</type>
</CustomField>