force-app/main/default/objects/GamePlayer__c/fields/NBRunsConceded__c.field-meta.xml
<CustomField>
    <fullName>NBRunsConceded__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NB Runs Conceded</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>