force-app/main/default/objects/GamePlayer__c/fields/PlayerName__c.field-meta.xml
<CustomField>
    <fullName>PlayerName__c</fullName>
    <formula>Player__r.Name</formula>
    <label>Player Name</label>
    <type>Text</type>
</CustomField>