force-app/main/default/objects/GamePlayer__c/fields/PlayerTeam__c.field-meta.xml
<CustomField>
    <fullName>PlayerTeam__c</fullName>
    <formula>Player__r.Team__r.Name</formula>
    <label>Player Team</label>
    <type>Text</type>
</CustomField>