force-app/main/default/objects/GamePlayer__c/fields/PlayerTeamId__c.field-meta.xml
<CustomField>
    <fullName>PlayerTeamId__c</fullName>
    <formula>CASESAFEID( Player__r.Team__c )</formula>
    <label>Player Team Id</label>
    <type>Text</type>
</CustomField>