force-app/main/default/objects/GamePlayer__c/fields/TotalBallsFaced__c.field-meta.xml
<CustomField>
    <fullName>TotalBallsFaced__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Balls Faced</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>