force-app/main/default/objects/GamePlayer__c/fields/TotalFours__c.field-meta.xml
<CustomField>
    <fullName>TotalFours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Fours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>