force-app/main/default/objects/GamePlayer__c/fields/TotalMaidens__c.field-meta.xml
<CustomField>
    <fullName>TotalMaidens__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Maidens</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>