force-app/main/default/objects/GamePlayer__c/fields/TotalOversBowled__c.field-meta.xml
<CustomField>
    <fullName>TotalOversBowled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Overs Bowled</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>