force-app/main/default/objects/GamePlayer__c/fields/TotalRunsScored__c.field-meta.xml
<CustomField>
    <fullName>TotalRunsScored__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Runs Scored</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>