force-app/main/default/objects/GamePlayer__c/fields/TotalSixes__c.field-meta.xml
<CustomField>
    <fullName>TotalSixes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Sixes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>