force-app/main/default/objects/GamePlayer__c/fields/TotalWicketsTaken__c.field-meta.xml
<CustomField>
    <fullName>TotalWicketsTaken__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Wickets Taken</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>