force-app/main/default/objects/GamePlayer__c/fields/WideRunsConceded__c.field-meta.xml
<CustomField>
    <fullName>WideRunsConceded__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wide Runs Conceded</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>